feat: Add logout in API v1.1.1
